--- a/woopSicredi-jobs/Podfile
+++ b/woopSicredi-jobs/Podfile
@@ -8,6 +8,7 @@ target 'woopSicredi-jobs' do
   # Pods for woopSicredi-jobs
 
 pod 'Alamofire'
-pod 'SteviaLayout' 
+pod 'SteviaLayout'
+pod 'AlamofireImage'
 
 end
